<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/textView_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/amount_players"
        android:textAppearance="?android:attr/textAppearanceMedium" >

    </TextView>
    
    <EditText
        android:id="@+id/editText_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignLeft="@+id/textView_player"
        android:layout_alignStart="@+id/textView_player"
        android:layout_below="@+id/textView_player"
        android:inputType="number">        
    </EditText>
    
    <TextView
        android:id="@+id/textView_rounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignLeft="@+id/textView_player"
        android:layout_alignStart="@+id/textView_player"
        android:layout_alignRight="@+id/editText_player"
        android:layout_alignEnd="@+id/editText_player"
        android:layout_below="@+id/editText_player"
        android:text="@string/amount_rounds"
        android:textAppearance="?android:attr/textAppearanceMedium" >
        
    </TextView>
    
    <EditText
        android:id="@+id/editText_rounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_alignLeft="@+id/textView_player"
        android:layout_alignStart="@+id/textView_player"
        android:layout_alignRight="@+id/editText_player"
        android:layout_alignEnd="@+id/editText_player"
        android:layout_below="@+id/textView_rounds"
        android:inputType="number">        
    </EditText>
    
    <Button
        android:id="@+id/button_start"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_rounds"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="play"
        android:text="@string/start" >
        
    </Button>
    
</RelativeLayout>